Fix margins on mobile

--- a/src/css/local-connect.css
+++ b/src/css/local-connect.css
@@ -199,10 +199,6 @@ h3 {
 }
 
 @media only screen and (max-width: 767px) {
-    #profile, #posts {
-        padding: 20px 0 5px;
-    }
-
     #profile > .grid > .column,
     #posts > .grid > .column {
         padding: 0.5rem !important;
